--- a/cafe/index.html
+++ b/cafe/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web page </title>
+    <title>Chilling Cafe Template</title>
 </head>
 <body>
-    <h1>This is heading page</h1>
-    <p> login ....</p>
+    
 </body>
 </html>
