--- a/cafe/index.html
+++ b/cafe/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chilling Cafe Template</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1> Chilling Cafe Template</h1>
+    <section class="header">
+        <h2> Coffee-Cafe</h2>
+        <img src="img/chilling-cafe-01.jpg" alt="">
+    </section>
+    <section>
+         <a target="_blank" href="img/menu-bar1.jpg"><h2>Coffee-Cafe</h2></a>
+         <P>Hot           Iced               Blended</P>
+
+    </section>
     
 </body>
 </html>
